updated teachers class availability